// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NonNativeSelect (multiple) should checkmark user selected options 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="makeStyles-root makeStyles-rootFull"
    >
      <div
        class="makeStyles-inputWrapper"
      >
        <div
          class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium makeStyles-outlinedInput MuiInputBase-fullWidth"
          role="textbox"
        >
          <input
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium"
            placeholder="Choose an option..."
            readonly=""
            size="1"
            type="text"
            value="text1, text3"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <svg
          class="PicassoSvgDropdownArrows16-root makeStyles-caret"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="M10.997 10.29l.707.707-3.707 3.707-3.707-3.707.707-.707 3 3 3-3zm-3-9l3.707 3.707-.707.707-3-3-3 3-.707-.707 3-3 .707-.707z"
          />
        </svg>
      </div>
    </div>
    <div
      class="PicassoPopper-root"
      role="tooltip"
      style="position: absolute; top: 0px; left: 0px; width: 0px;"
      x-placement="bottom-start"
    >
      <ul
        class="MuiList-root Menu-root PicassoScrollMenu-menu"
        role="menu"
        tabindex="-1"
      >
        <div
          class="PicassoScrollMenu-scrollView"
          tabindex="0"
        >
          <li
            aria-disabled="false"
            aria-selected="true"
            class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light Mui-selected PicassoMenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
            role="option"
            tabindex="-1"
            value="val1"
          >
            <div
              class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
            >
              <div
                class="PicassoContainer-centerAlignItems PicassoContainer-flex"
              >
                <div
                  class="PicassoContainer-rightxsmallMargin PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
                >
                  <svg
                    class="PicassoSvgCheckMinor16-root"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M6.5 9.793l4-4 .707.707-4 4-.707.707L3.793 8.5l.707-.707 2 2z"
                    />
                  </svg>
                </div>
                <span
                  class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium PicassoMenuItem-stringContentSemibold"
                >
                  text1
                </span>
              </div>
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
            role="option"
            tabindex="-1"
            value="val2"
          >
            <div
              class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
            >
              <div
                class="PicassoContainer-centerAlignItems PicassoContainer-flex"
              >
                <div
                  class="PicassoContainer-rightxsmallMargin PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
                />
                <span
                  class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
                >
                  text2
                </span>
              </div>
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
            role="option"
            tabindex="-1"
            value="val3"
          >
            <div
              class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
            >
              <div
                class="PicassoContainer-centerAlignItems PicassoContainer-flex"
              >
                <div
                  class="PicassoContainer-rightxsmallMargin PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
                >
                  <svg
                    class="PicassoSvgCheckMinor16-root"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M6.5 9.793l4-4 .707.707-4 4-.707.707L3.793 8.5l.707-.707 2 2z"
                    />
                  </svg>
                </div>
                <span
                  class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium PicassoMenuItem-stringContentSemibold"
                >
                  text3
                </span>
              </div>
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`NonNativeSelect renders select 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="makeStyles-root makeStyles-rootFull"
    >
      <div
        class="makeStyles-inputWrapper"
      >
        <div
          class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium makeStyles-outlinedInput MuiInputBase-fullWidth"
          role="textbox"
        >
          <input
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium"
            readonly=""
            size="1"
            type="text"
            value="text1"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <svg
          class="PicassoSvgDropdownArrows16-root makeStyles-caret"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="M10.997 10.29l.707.707-3.707 3.707-3.707-3.707.707-.707 3 3 3-3zm-3-9l3.707 3.707-.707.707-3-3-3 3-.707-.707 3-3 .707-.707z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`NonNativeSelect should render description 1`] = `
<ul
  class="MuiList-root Menu-root PicassoScrollMenu-menu"
  role="menu"
  tabindex="-1"
>
  <div
    class="PicassoScrollMenu-scrollView"
    tabindex="0"
  >
    <li
      aria-disabled="false"
      aria-selected="true"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light Mui-selected PicassoMenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
      role="option"
      tabindex="-1"
      value="val1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <div
            class="PicassoContainer-rightxsmallMargin PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
          />
          <span
            class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
          >
            text1
          </span>
        </div>
        <div
          class="PicassoContainer-leftmediumMargin PicassoMenuItem-description"
          style="margin-top: 0.25rem;"
        >
          description1
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val2"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <div
            class="PicassoContainer-rightxsmallMargin PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
          />
          <span
            class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
          >
            text2
          </span>
        </div>
        <div
          class="PicassoContainer-leftmediumMargin PicassoMenuItem-description"
          style="margin-top: 0.25rem;"
        >
          description2
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val3"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <div
            class="PicassoContainer-rightxsmallMargin PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
          />
          <span
            class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
          >
            text3
          </span>
        </div>
        <div
          class="PicassoContainer-leftmediumMargin PicassoMenuItem-description"
          style="margin-top: 0.25rem;"
        >
          description3
        </div>
      </div>
    </li>
  </div>
</ul>
`;

exports[`NonNativeSelect should render options customly 1`] = `
<ul
  class="MuiList-root Menu-root PicassoScrollMenu-menu"
  role="menu"
  tabindex="-1"
>
  <div
    class="PicassoScrollMenu-scrollView"
    tabindex="0"
  >
    <li
      aria-disabled="false"
      aria-selected="true"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light Mui-selected PicassoMenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
      role="option"
      tabindex="-1"
      value="val1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <div
            class="PicassoContainer-rightxsmallMargin PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
          />
          <div>
            Custom renderered text1
          </div>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val2"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <div
            class="PicassoContainer-rightxsmallMargin PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
          />
          <div>
            Custom renderered text2
          </div>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val3"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <div
            class="PicassoContainer-rightxsmallMargin PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
          />
          <div>
            Custom renderered text3
          </div>
        </div>
      </div>
    </li>
  </div>
</ul>
`;
